# smart-espri-

./: README.md  main.c
projet_user/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  projet_user.glade.bak  projet_user.gladep.bak
projet_user/autom4te.cache/: output.1  requests  traces.0  traces.1
projet_user/po/: Makefile  Makefile.in
projet_user/src/: Makefile  Makefile.am  Makefile.in  callbacks.c  callbacks.h  fonction.c  fonction.h  interface.c  interface.h  main.c  projet_user  utilisateur.txt
projet_user/src/.deps/: callbacks.Po
